dist_man1_MANS=

if BUILD_YOUNGSEOKCOIND
  dist_man1_MANS+=youngseokcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=youngseokcoin-qt.1
endif

if BUILD_YOUNGSEOKCOIN_CLI
  dist_man1_MANS+=youngseokcoin-cli.1
endif

if BUILD_YOUNGSEOKCOIN_TX
  dist_man1_MANS+=youngseokcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_YOUNGSEOKCOIN_WALLET
  dist_man1_MANS+=youngseokcoin-wallet.1
endif
endif
